# nsg-cli

./: .gitignore  Cargo.toml  README.md
examples/: README.md
examples/test-job/modeldir/: input.py  params.json
src/: client.rs  config.rs  lib.rs  main.rs  models.rs
src/commands/: download.rs  list.rs  login.rs  mod.rs  status.rs  submit.rs
