[package]
name = "nsg-cli"
version = "0.1.2"
edition = "2021"
authors = [
	"Simon Draeger <sdraeger@salk.edu>",
	"Claudia Lainscsek <claudia@salk.edu>",
]
description = "CLI tool for the Neuroscience Gateway (NSG) BRAIN Initiative API"
license = "MIT"
repository = "https://github.com/sdraeger/nsg-cli"
homepage = "https://www.nsgportal.org/"
readme = "README.md"
keywords = ["neuroscience", "nsg", "hpc", "brain", "cli"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "nsg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
reqwest = { version = "0.12.24", features = ["blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
dirs = "6.0"
anyhow = "1.0"
colored = "3.0"
indicatif = "0.18.1"
chrono = "0.4"
rpassword = "7.3"

[lib]
name = "nsg_cli"
path = "src/lib.rs"
